# MicW2Graph

./: .gitignore  CITATION.cff  LICENSE  MicW2Graph_Home.py  README.md  config.yml  pyproject.toml  requirements.txt  utils.py  web_utils.py
.streamlit/: config.toml
css/: style.css  style.py
data/Case_studies/: Activated_sludge_and_metagenomics_association_cluster.graphml  Activated_sludge_and_metagenomics_association_cluster.html  Wastewater_and_metagenomics_association_cluster1.graphml  Wastewater_and_metagenomics_association_cluster1.html  Wastewater_and_metagenomics_association_cluster2.graphml  Wastewater_and_metagenomics_association_cluster2.html  Wastewater_and_metagenomics_functional_cluster.graphml  Wastewater_and_metagenomics_functional_cluster.html
data/EDA/: Mgnify_analyses_wwt_shot_metag_assembly.csv  Mgnify_studies_wwt_shot_metag_assembly.csv  wwtstudies_greater_mediantaxa_perbiome_species.csv
data/KG/Activated_sludge/: ActivatedSludge_assembly.dump  ActivatedSludge_assembly.graphml  ActivatedSludge_assembly.html  ActivatedSludge_metagenomics.dump  ActivatedSludge_metagenomics.graphml  ActivatedSludge_metagenomics.html  ActivatedSludge_metatranscriptomics.dump  ActivatedSludge_metatranscriptomics.graphml  ActivatedSludge_metatranscriptomics.html
data/KG/Complete_KG/: MicW2Graph.dump  MicW2Graph.graphml
data/KG/Industrial_wastewater/: IndustrialWastewater_metagenomics.dump  IndustrialWastewater_metagenomics.graphml  IndustrialWastewater_metagenomics.html
data/KG/Wastewater/: Wastewater_assembly.dump  Wastewater_assembly.graphml  Wastewater_assembly.html  Wastewater_metagenomics.dump  Wastewater_metagenomics.graphml  Wastewater_metagenomics.html  Wastewater_metatrasncriptomics.dump  Wastewater_metatrasncriptomics.graphml  Wastewater_metatrasncriptomics.html
data/KG/Water_and_sludge/: WaterSludge_metagenomics.dump  WaterSludge_metagenomics.html  (+1 more)
pages/: 1_Exploratory_data_analysis.py  2_Microbial_association_networks.py  3_Knowledge_graph_and_subgraphs.py  4_Case_studies.py
(+399 files in other folders)
