[project]
name = "micw2graph"
version = "0.1.0"
description = "Building a knowledge graph of the wastewater treatment microbiome and its biological context"
authors = [{ name = "sayalaruano", email = "s_ayalaruano@proton.me" }]
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = "MIT"
dependencies = [
    "pandas>=2.2.2,<3",
    "numpy>=1.26.4,<2",
    "scipy==1.10.1",
    "jsonapi-client>=0.9.9,<0.10",
    "requests>=2.32.2,<3",
    "plotly>=5.22.0,<6",
    "scikit-learn>=1.5.0,<2",
    "scikit-bio==0.5.9",
    "streamlit==1.32.2",
    "streamlit-aggrid==0.3.4.post3",
    "seaborn>=0.13.2,<0.14",
    "colorcet>=3.0.1,<4",
    "biopython~=1.83",
    "networkx~=3.3",
    "pyvis>=0.3.2,<0.4",
    "PyYAML>=6.0.1,<7",
    "streamlit-extras>=0.4.2,<0.5",
    "streamlit-option-menu>=0.3.12,<0.4",
    "stvis>=0.0.2,<0.0.3",
    "urllib3>=2.2.1,<3",
]

[dependency-groups]
dev = [
    "kaleido==0.2.1",
    "ipykernel>=6.29.4,<7",
    "black>=25.1.0",
]

[tool.uv]
default-groups = []
